--- a/index.html
+++ b/index.html
@@ -1,47 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nexty Session Generator</title>
-  <style>
-    body { font-family: Arial; background: #0a0a0a; color: white; text-align: center; }
-    h1 { color: #00ffcc; }
-    img { margin-top: 20px; width: 250px; }
-    button { padding: 10px 20px; background: #00ffcc; color: #000; border: none; border-radius: 10px; cursor: pointer; }
-    #sessionBox { background: #111; padding: 10px; margin-top: 20px; border-radius: 10px; display: inline-block; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Nexty Session Generator</title>
+<style>
+  body {
+    background: #000;
+    color: #0ff;
+    font-family: monospace;
+    text-align: center;
+    padding-top: 80px;
+  }
+  h1 { color: #00ffe6; }
+  button {
+    background: #00ffe6;
+    color: #000;
+    padding: 10px 25px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-weight: bold;
+  }
+  #pairCodeBox, #sessionBox {
+    margin-top: 30px;
+    padding: 15px;
+    background: #111;
+    border-radius: 12px;
+    display: inline-block;
+    min-width: 250px;
+  }
+  #pairCode {
+    font-size: 26px;
+    letter-spacing: 5px;
+    color: #0ff;
+  }
+</style>
 </head>
 <body>
   <h1>Nexty Session ID Generator</h1>
-  <button onclick="start()">Generate Session ID</button>
-  <div id="qrBox"></div>
+  <button onclick="start()">Generate Pair Code</button>
+  <div id="pairCodeBox"></div>
   <div id="sessionBox"></div>
 
   <script>
     async function start() {
-      document.getElementById("qrBox").innerHTML = "Generating QR...";
-      let res = await fetch("/start", { method: "POST", headers: { "Content-Type": "application/json" }, body: JSON.stringify({}) });
-      let data = await res.json();
-      let id = data.clientId;
-      checkQR(id);
+      document.getElementById("pairCodeBox").innerHTML = "Generating Pair Code...";
+      const res = await fetch("/start", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({})
+      });
+      const data = await res.json();
+      checkPairCode(data.clientId);
     }
 
-    async function checkQR(id) {
+    async function checkPairCode(id) {
       let timer = setInterval(async () => {
-        let qrRes = await fetch(`/qr?clientId=${id}`);
-        let qrData = await qrRes.json();
-        if (qrData.qr) {
-          document.getElementById("qrBox").innerHTML = `<img src="${qrData.qr}">`;
+        let res = await fetch(`/pair?clientId=${id}`);
+        let pair = await res.json();
+        if (pair.code) {
+          document.getElementById("pairCodeBox").innerHTML =
+            `<b>🔗 Pair this code in WhatsApp:</b><br><div id='pairCode'>${pair.code}</div>`;
         }
-        let sessionRes = await fetch(`/session?clientId=${id}`);
-        let sessionData = await sessionRes.json();
-        if (sessionData.session) {
+
+        let sres = await fetch(`/session?clientId=${id}`);
+        let sess = await sres.json();
+        if (sess.session) {
           clearInterval(timer);
-          document.getElementById("qrBox").innerHTML = "";
-          document.getElementById("sessionBox").innerHTML = `<b>Session ID:</b><br><code>${sessionData.session}</code>`;
+          document.getElementById("pairCodeBox").innerHTML = "";
+          document.getElementById("sessionBox").innerHTML =
+            `<b>✅ Your Session ID:</b><br><code>${sess.session}</code>`;
         }
-      }, 2000);
+      }, 2500);
     }
   </script>
 </body>
